# my_streaming_software

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
docs/: README.md
src/effects/: real_time_effects.cpp  real_time_effects.h
src/gui/: main_window.cpp  main_window.h
src/recorder/: audio_recorder.cpp  audio_recorder.h  screen_recorder.cpp  screen_recorder.h  webcam_recorder.cpp  webcam_recorder.h
src/streamer/: live_streamer.cpp  live_streamer.h  rtmp_streamer.cpp  rtmp_streamer.h  webrtc_streamer.cpp  webrtc_streamer.h
src/utils/: ffmpeg_wrapper.cpp  ffmpeg_wrapper.h
tests/: test_audio_recorder.cpp  test_real_time_effects.cpp  test_recorder.cpp  test_streamer.cpp  test_webcam_recorder.cpp
